# chat_multiusuario

./: CMakeLists.txt  README.md  script_test.sh
libtslog/: tslog.cpp  tslog.h  tslog_test.cpp
src/: ChatClient.cpp  ChatClient.h  ChatServer.cpp  ChatServer.h  ClientManager.cpp  ClientManager.h  ClientSession.cpp  ClientSession.h  MessageHistory.cpp  MessageHistory.h  ThreadSafeQueue.h  main_client.cpp  main_server.cpp  server
